salesforce-port/force-app/main/default/objects/GL_Code_Mapping__mdt/GL_Code_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>GL Code Mapping</label>
    <pluralLabel>GL Code Mappings</pluralLabel>
</CustomObject>