salesforce-port/force-app/main/default/objects/GL_Code_Mapping__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>