salesforce-port/force-app/main/default/objects/GL_Code_Mapping__mdt/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>