salesforce-port/force-app/main/default/objects/GL_Code_Mapping__mdt/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>QuickBooksOnline</fullName><default>false</default><label>QuickBooks Online</label></value>
            <value><fullName>Xero</fullName><default>false</default><label>Xero</label></value>
            <value><fullName>NetSuite</fullName><default>false</default><label>NetSuite</label></value>
            <value><fullName>SageIntacct</fullName><default>false</default><label>Sage Intacct</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>